--- a/client/src/styles/abstracts/_variables.scss
+++ b/client/src/styles/abstracts/_variables.scss
@@ -61,8 +61,8 @@ $colors: (
 $shadows: (
   small: 0 1px 5px rgba(0,0,0,0.1),
   medium: 0 2px 5px rgba(0,0,0,0.2),
-  big: 0 2px 5px rgba(0,0,0,0.4),
-  medium-right: 2px 0 5px rgba(0,0,0,0.2),
+  big: 0 2px 5px rgba(0,0,0,0.3),
+  big-right: 2px 0 10px rgba(0,0,0,0.3),
 );
 
 // For border-radius
