--- a/client/src/styles/components/filters/_filter.scss
+++ b/client/src/styles/components/filters/_filter.scss
@@ -2,10 +2,6 @@
   margin: margin(XS);
   transition: all 0.3s;
 
-  &:not(:last-child) {
-    border-bottom: 1px solid black;
-  }
-
   &__header {
     display: flex;
     align-items: center;
@@ -68,80 +64,6 @@
 /*------------------------------------------------------------------
   SPECIFIC FILTERS
   ------------------------------------------------------------------*/
-
-.filter--categories {
-  .form {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: start;
-
-    @include bp(M) {
-      flex-direction: column;
-      flex-wrap: nowrap;
-    }
-  }
-
-  .field {
-    width: 50%;
-    padding: padding(XXS) padding(XS);
-    margin-bottom: margin(S);
-
-    @include bp(M) {
-      width: 100%;
-    }
-
-    &__name {
-      display: flex;
-      width: 80%;
-      align-items: center;
-      margin-left: margin(XXS);
-
-      font-size: 1.4rem;
-      line-height: 1.8rem;
-    }
-  }
-}
-
-.filter--categories.isActive {
-  .form { 
-    height: 31rem; 
-
-    @include bp(M) {
-      height: 50rem;
-    }
-  }
-}
-
-.filter--location {
-  .form {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-
-    @include bp(M) {
-      flex-direction: column;
-    }
-  }
-
-  .field__input {
-    width: 8rem;
-
-    @include bp(M) {
-      width: 14rem;
-    }
-  }
-}
-
-.filter--location.isActive {
-  .form { 
-    height: 8rem; 
-
-    @include bp(M) {
-      height: 20rem;
-    }
-  }
-}
 
 .filter--dates {
   .form {
